--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT = 1000
-FRONTEND_URL = http://localhost:5173
+FRONTEND_URL = http://localhost:5173/
 MONGODB_URI = mongodb+srv://rudrajan24:rudrajan24@chat-app.7sm6c.mongodb.net/?retryWrites=true
 JWT_SECRET_KEY = 'gjhgjhgvgjgjhgvhgvgffsrfddnddhd'
