--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT = 1000
-FRONTEND_URL = https://aquamarine-cucurucho-095b48.netlify.app/
+FRONTEND_URL = https://msg-app.netlify.app/
 MONGODB_URI = mongodb+srv://rudrajan24:rudrajan24@chat-app.7sm6c.mongodb.net/?retryWrites=true
 JWT_SECRET_KEY = 'gjhgjhgvgjgjhgvhgvgffsrfddnddhd'
