--- a/server/.env
+++ b/server/.env
@@ -4,4 +4,6 @@ MONGODB_URI = mongodb+srv://rudrajan24:rudrajan24@chat-app.7sm6c.mongodb.net/?re
 JWT_SECRET_KEY = 'gjhgjhgvgjgjhgvhgvgffsrfddnddhd'
 
 
+${import.meta.env.VITE_BACKEND_URL}
+
 
