--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 CLOUD_NAME =  dxnbxg50o
-VITE_BACKEND_URL = https://chat-app-4cyr.onrender.com
+VITE_BACKEND_URL = https://chat-app-nil1.onrender.com
